VPC.tf
resource "aws_vpc" "VPCTFAssignment1" {
  cidr_block       = "10.0.0.0/16"
  instance_tenancy = "default"

  tags = {
    Name = "VPCTFAssignment1"
  }
}
